--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html>
   <head>
     <title>Twitinerary</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="/stylesheets/main.css" />
     <script type="text/javascript"
       src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascript/notifier.js"></script>
     <script type="text/javascript" src="/javascript/main.js"></script>
   </head>
 
   <body>
+    <div id="notifier"><p></p></div>
+
     <h1>Twitinerary</h1>
 
     <form id="new-tweet" action="/tweets/new" method="post">
