Added ability to notifiy of failures as well as successes. Added button to dismiss notifications.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
   </head>
 
   <body>
-    <div id="notifier"><p></p></div>
+    <div id="notifier">
+      <p></p>
+      <input id="dismiss-notification" type="button" value="OK" />
+    </div>
 
     <h1>Twitinerary</h1>
 
